[package]
name = "pmtiles-server"
version = "0.1.0"
edition = "2021"

[dependencies]
pmtiles = {path = "../pmtiles", features = ["s3"]}
anyhow = "1.0.83"
axum-aws-lambda = "0.6.0"
aws-sdk-s3 = {version = "1.25.0"}
axum = "0.7.4"
clap = { version = "4.4.6", features = ["derive"] }
hyper = "1.2.0"
lambda_http = "0.9.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.60"
tokio = { version = "1", features = ["macros"] }
tower-http = {version = "0.5.2", features = ["compression-br", "compression-gzip", "cors", "tracing", "trace"] }
tracing =  {version = "0.1.40", features = ["log"]}
tower = "0.4.13"
aws-config = { version = "1.3.0", default-features = false, features = ["client-hyper", "credentials-process", "behavior-version-latest"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
rand = "0.8.5"
