[package]
name = "pmtiles"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
aws-sdk-s3 = {version = "1.25.0", optional = true}
brotli-decompressor = "4.0.0"
byteorder = "1.5.0"
fxhash = "0.2.1"
serde_json = "1.0.116"
thiserror = "1.0.60"
tokio = { version = "1", features = ["fs", "macros"] }
tracing = "0.1.40"
zstd = "0.13.1"
zune-inflate = "0.2.54"

[features]
s3 = ["dep:aws-sdk-s3"]

[dev-dependencies]
aws-config = { version = "1.3.0", default-features = false, features = ["client-hyper", "credentials-process", "behavior-version-latest"] }
